--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -52,5 +52,5 @@ jobs:
     #  run: terraform apply -auto-approve
     
     - name: Terraform destroy
-      run: terraform destroy -auto-approved
+      run: terraform destroy -auto-approve
       
