--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,11 +1,11 @@
 
-#name: 'Terraform_Apply'
-name: 'Terraform_Destroy'
+
+name: 'Terraform'
 
 on:
   push:
     branches: [ "main" ]
-  #pull_request:
+  pull_request:
 
 permissions:
   contents: read
@@ -37,21 +37,25 @@ jobs:
       run: terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
-    #- name: Terraform Format
-    #  run: terraform fmt
-
+    - name: Terraform Format
+      run: terraform fmt -check
+      env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -destroy
-      
+      run: terraform plan -input=false
+      env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    #- name: Terraform Apply
-    #  if: github.event_name == 'push'
-    #  run: terraform apply -auto-approve
-    
-    - name: Terraform destroy
-      run: terraform destroy -auto-approve
-      
+    - name: Terraform Apply
+      #if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
+      run: terraform apply -auto-approve -input=false
+      env:
+          GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
+
+
+##Removed/destroy both resources(VPC and storage bucket) manually through GCP console, Now again trying to push the code to Github repo 
+## monitor the Github Action workflow
