--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,7 +1,7 @@
 
 
-name: 'Terraform'
-
+#name: 'Terraform'
+name: 'Terraform_destroy'
 on:
   push:
     branches: [ "main" ]
@@ -44,15 +44,15 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false
+      run: terraform plan -destroy
       env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
-    - name: Terraform Apply
+    - name: Terraform Destroy
       #if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false
+      run: terraform destroy -auto-approve 
       env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
