--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,7 +44,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -destroy
+      run: terraform plan
       env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
@@ -52,7 +52,7 @@ jobs:
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Destroy
       #if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform destroy -auto-approve 
+      run: terraform destroy -auto-approve -input=false
       env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
