--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -44,7 +44,7 @@ jobs:
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan
+      run: terraform plan -destroy
       env:
           GOOGLE_CREDENTIALS: ${{ secrets.GCP_Console_Credentials }}
 
